# aws_s3

./: .cursorrules  .travis.yml  Makefile  README.md  pyproject.toml  requirements_dev.txt  tox.ini
.github/workflows/: docs.yml
docs/source/: aws_s3.rst  conf.py  index.rst  modules.rst
src/aws_s3/: __init__.py  config.py  connector.py  exceptions.py
tests/: test_connector.py
