[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aws_s3"
version = "0.1.0"
description = "Python Boilerplate contains all the boilerplate you need to create a Python package."
readme = "README.rst"
authors = [
  {name = "Jared Felice", email = "jmfelice@icloud.com"}
]
maintainers = [
  {name = "Jared Felice", email = "jmfelice@icloud.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
requires-python = ">=3.9"
license = {text = "MIT license"}
dependencies = [
    "boto3>=1.34.0",
    "botocore>=1.34.0"
]

[project.optional-dependencies]
dev = [
    "coverage>=7.0.0",
    "mypy>=1.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0"
]

[project.urls]

bugs = "https://github.com/jmfelice/aws_s3/issues"
changelog = "https://github.com/jmfelice/aws_s3/blob/master/changelog.md"
homepage = "https://github.com/jmfelice/aws_s3"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

